# acentem_takipte

./: .dockerignore  .gitignore  AGENTS.md  AUDIT_PROGRESS.md  BUYUK_EKRAN_REFACTOR_TAKIP.md  DOSYA_HARITASI_RAPORU.md  DOSYA_REFACTOR_REHBERI.md  LOCALIZATION_COMPLETION_REPORT.md  MANIFEST.in  PERFORMANCE_SECURITY_AUDIT_PLAN.md  README.md  REFACTOR_DETAYLI_INCELEME.md  REFACTOR_TAKIP.md  ROADMAP.md  TEKNIK_DENETIM_TAKIP.md  acentem-audit.html  at-gelisim-plani.md  bench_update.sh  check_schema.py  dump.rdb  get_all_fields.sql  get_policies.sql  git_operations.py  hooks.py  list_policies.py  localization_audit_detailed.txt  missing_sources.txt  package-lock.json  pyproject.toml  requirements.txt  run_git.bat  run_git_commands.bat  run_site_map_e2e.bat  setup.py  test-out.txt
.githooks/: pre-commit
.plan/: README.md  backlog.md  dalga-1.md  dalga-2.md  dalga-3.md  dalga-4.md  dalga-5.md  dalga-6.md  dalga-7.md  release-smoke-checklist.md  sprint-plan.md
.playwright-cli/: page-2026-03-04T11-42-38-557Z.yml  page-2026-03-04T12-10-37-522Z.yml  page-2026-03-05T10-47-45-234Z.yml
MD/: GORSEL-ANALIZ-ROADMAP-2026-03-21.md  KALAN-ISLER.md  MASTER-INDEX.md  README.md  UI-KONSOLIDASYON-YOL-HARITASI.md
acentem_takipte/: communication.py  hooks.py  modules.txt  notifications.py  patches.txt
docs/: ARCHITECTURE_MAP.md  ARCHITECTURE_OVERVIEW.md  AT_ACCESS_PROTOCOL_REPORT.md  AT_ROLE_PAGE_PERMISSION_MATRIX.md  AT_YENILEME_PLANI.md  AUDIT_PROGRESS.md  COOLIFY_VPS_DEPLOY_GUIDE.md  DATA_IMPORT_GUIDE.md  DESIGN_GUIDELINES.md  MIMARI_DENETIM_RAPORU.md  OPS_ALERT_MONITOR.md  PRODUCTION_DEPLOY_CHECKLIST.md  README.md  UI_REVIEW_CHECKLIST.md  UI_SIDEBAR_AUDIT_2026-05-21.md  dashboard_benchmark_report_localhost_2026-02-26.json  dashboard_wave5_performance_index_plan_tr.md  (+7 more)
(+2294 files in other folders)
