[project]
name = "acentem_takipte"
version = "0.0.1"
description = "Insurance agency CRM and policy tracking app"
authors = [
    { name = "ABK", email = "aykutburakk@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["dependencies"]

[project.urls]
Homepage = "https://github.com/ayktbrkk/acentem_takipte"

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
